Wed Oct 22 12:16:10 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_rewrite): Call ferror before fclose to avoid "Invalid
	argument" warnings.

Mon Oct 20 00:30:16 1997  Tim Pierce  <twp@twp.tezcat.com>

	[I removed a ChangeLog entry for a change to sanity.sh (editor),
	because the actual change was not made.  With this change, CVS no
	longer runs RCS.  I'll be checking in my cleanups shortly. -kingdon]

	Librarify `ci'.
	* rcscmds.c, cvs.h (RCS_checkin): Removed.
	* rcs.c, rcs.h (RCS_checkin, RCS_getbranchpoint, RCS_addbranch,
	RCS_findlock_or_tip): New functions.  RCS_checkin completely
	rewritten to eliminate RCS 5.7; change `rcs' parameter from string
	to RCSNode, so we can update RCSNode without re-reading from
	disk.
	* checkin.c (Checkin): Updated RCS_checkin caller, moved RCS_parse
	call to before RCS_checkin.
	* import.c (add_rev): Updated caller.
	* commit.c (remove_file): Updated caller.
	(checkaddfile): Updated caller.  Parse `rcsfile' after
	calling add_rcs_file.  Free `rcsfile' instead of asserting it to
	be NULL.

	Librarify `rcs'.
	* rcscmds.c, cvs.h (RCS_exec_settag, RCS_exec_deltag,
	RCS_exec_setbranch, RCS_exec_lock, RCS_exec_unlock): Removed.
	
	* rcs.c (RCS_settag): Rewritten to eliminate RCS 5.7.
	* commit.c (checkaddfile): Call RCS_rewrite after calling RCS_settag.
	* import.c (add_tags): Same.
	* rtag.c (rtag_fileproc): Same.
	* tag.c (tag_fileproc): Same.

	* rcs.c (RCS_deltag): Rewritten to eliminate RCS 5.7.  Remove
	`quiet' parameter, since this function no longer prints any output.
	* commit.c (remove_file): Update caller.  Also call RCS_rewrite
	after RCS_deltag.
	* rtag.c (rtag_delete): Same.
	* tag.c (tag_fileproc): Same.

	* rcs.c (RCS_setbranch): Rewritten to eliminate RCS 5.7.
	* commit.c (remove_file): Call RCS_rewrite after calling RCS_setbranch.
	(fixbranch): Same.
	(lock_RCS): Same.

	* rcs.c (RCS_lock): Rewritten to eliminate RCS 5.7. Change third